fixed search container overflow

--- a/react-app/src/components/Profile/Profile.css
+++ b/react-app/src/components/Profile/Profile.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-size: cover; /* <------ */
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   height: 200px;
@@ -166,6 +166,7 @@
   cursor: pointer;
   height: 400px;
   width: 400px;
+  box-shadow: 0 0 2px 0 rgb(0, 0, 0);
 }
 .profile-image-hover:hover {
   cursor: pointer;
