--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -3,6 +3,7 @@
   border-radius: 12px;
   padding: 5px;
   width: 300px;
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
 }
 
 .wow {
@@ -99,9 +100,10 @@
 
 .fade-in-container {
   display: flex;
+  width: 100%;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   animation: fade-in 1s ease-in-out;
 }
 
