--- a/react-app/src/components/SingleImage/SingleImage.css
+++ b/react-app/src/components/SingleImage/SingleImage.css
@@ -33,8 +33,9 @@
 .single-image {
   height: 700px;
   width: 700px;
-  padding-top: 30px;
-  padding-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.571);
 }
 
 .product-info {
